[package]
name = "srogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
ncurses = { version = "5.101.0", features = ["wide"] }
rand = "0.8.5"
whoami = "1.4.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.108"
signal-hook = "0.3.17"
lazy_static = "1.4.0"
anyhow = "1.0.88"
